--- a/Q_learning.ipynb
+++ b/Q_learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9VrTHX3IaF50ysrfLWZ8e",
+      "authorship_tag": "ABX9TyOFNo7pi5oZLNvV2jCNGHBt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 19,
       "metadata": {
         "id": "A0dbhp7zZogw"
       },
@@ -54,9 +54,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZC7z343qaHW-",
-        "outputId": "8b138142-6b9f-4678-8edb-259f8f57e5c9"
+        "outputId": "51cc4f65-c717-47a6-8071-3ddfe29d3c7f"
       },
-      "execution_count": 2,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +71,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 20
         }
       ]
     },
@@ -85,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pP9daYUoaIK3",
-        "outputId": "5f14063d-671a-43db-9c54-1233a2040c77"
+        "outputId": "7d921215-9c7e-4e4e-98e8-f50271010d49"
       },
-      "execution_count": 3,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 21
         }
       ]
     },
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "dHnH2679aPOe"
       },
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -122,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uw5EYr1EaqD4",
-        "outputId": "f7f14dcb-c965-459a-fbcc-d943676aaf04"
+        "outputId": "785ff9ae-ea76-4091-c2c9-acd0c271598d"
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +139,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 23
         }
       ]
     },
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "b1sXfHjjatei"
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "yiTcVzaybDXZ"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "71wRYc4Rblbo"
       },
-      "execution_count": 8,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -192,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGa_wFq5cVvh",
-        "outputId": "dcbdead9-4b19-4cb7-b635-95277d440c5f"
+        "outputId": "9a92fef8-6031-4037-8bb4-b69ca7f71ea5"
       },
-      "execution_count": 9,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 27
         }
       ]
     },
@@ -221,9 +221,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "orVR7o6_cXPh",
-        "outputId": "6704a08d-0605-4924-a6a2-9f8d027a88ce"
+        "outputId": "05a6a9d0-71b6-4c40-cd51-b67d5349702f"
       },
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "gASLyGhCckSs"
       },
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "oCchuqYVdSfO"
       },
-      "execution_count": 12,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -275,9 +275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hv8jayuqe9Tr",
-        "outputId": "c47efa43-25ed-40db-c872-2b48732fea79"
+        "outputId": "10bfbec0-5db0-49d1-8aa9-57b5d0f99856"
       },
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 31
         }
       ]
     },
@@ -297,39 +297,21 @@
         "#this function updates the q matrix according to the path selected\n",
         "def update(current_state,action,gamma):\n",
         "  max_index=np.where(Q[action,]==np.max(Q[action,]))[1]\n",
-        "  if max_index.shappe[0]>1:\n",
+        "  if max_index.shape[0]>1:\n",
         "    max_index=int(np.random.choice(max_index,size=1))\n",
         "  else:\n",
         "    max_index=int(max_index)\n",
-        "    max_value=Q[action,max_index]\n",
+        "  max_value=Q[action,max_index]\n",
         "    # Q learning formula\n",
-        "    Q[current_state,action]=R[current_state,action]+gamma*max_value\n",
+        "  Q[current_state,action]=R[current_state,action] + gamma*max_value\n",
         "#update Q value matrix\n",
         "update(initial_state,action,gamma)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        },
-        "id": "3v4n3_JFe9yi",
-        "outputId": "1486e5f9-13f3-4c3d-9423-090a5b351a9d"
+        "id": "3v4n3_JFe9yi"
       },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-1738a034ce65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mQ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcurrent_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mR\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcurrent_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmax_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#update Q value matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-17-1738a034ce65>\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(current_state, action, gamma)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mmax_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mmax_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshappe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mmax_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_index\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'shappe'"
-          ]
-        }
-      ]
+      "execution_count": 40,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -341,24 +323,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n1vrHsKqhwZh",
-        "outputId": "8c0646cd-b1a9-424d-f62a-9bd652b879fa"
+        "outputId": "025b780d-ac33-4b96-a41d-13ee1b1a817a"
       },
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "matrix([[0., 0., 0., 0., 0., 0.],\n",
-              "        [0., 0., 0., 0., 0., 0.],\n",
-              "        [0., 0., 0., 0., 0., 0.],\n",
-              "        [0., 0., 0., 0., 0., 0.],\n",
-              "        [0., 0., 0., 0., 0., 0.],\n",
-              "        [0., 0., 0., 0., 0., 0.]])"
+              "matrix([[ 0.,  0.,  0.,  0.,  0.,  0.],\n",
+              "        [ 0., -1.,  0.,  0.,  0.,  0.],\n",
+              "        [ 0.,  0.,  0.,  0.,  0.,  0.],\n",
+              "        [ 0.,  0.,  0.,  0.,  0.,  0.],\n",
+              "        [ 0.,  0.,  0.,  0.,  0.,  0.],\n",
+              "        [ 0.,  0.,  0.,  0.,  0.,  0.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 41
         }
       ]
     },
@@ -374,28 +356,10 @@
         "  update(current_state,action,gamma)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        },
-        "id": "JV2CaDw1h1Wi",
-        "outputId": "df446afa-be86-45a9-c6cf-014a8cdf1b58"
+        "id": "JV2CaDw1h1Wi"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-e3bf2a269d5c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mavailable_act\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mavailable_actions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0maction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_next_action\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavailable_act\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-14-019c80395887>\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(current_state, action, gamma)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mmax_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mmax_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshappe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mmax_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_index\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'shappe'"
-          ]
-        }
-      ]
+      "execution_count": 42,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -403,7 +367,107 @@
         "Q\n"
       ],
       "metadata": {
-        "id": "SoQWqUAmiyZg"
+        "id": "SoQWqUAmiyZg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7cef8af8-9034-4619-f8f5-ab611233af0a"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "matrix([[  0.,   0.,   0.,   0., 400.,   0.],\n",
+              "        [  0.,  -1.,   0., 320.,   0., 500.],\n",
+              "        [  0., 400., 320.,   0., 400.,   0.],\n",
+              "        [  0., 400., 320.,   0., 400.,   0.],\n",
+              "        [  0., 400., 320.,   0.,   0., 500.],\n",
+              "        [  0., 400.,   0.,   0., 400., 500.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Trained Q matrix\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4fu4QNyckDnL",
+        "outputId": "0df90cce-16e9-4d68-8a17-ebb459d582fb"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Trained Q matrix\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#testing \n",
+        "#goal state=5\n",
+        "current_state=1\n",
+        "steps=[current_state]\n",
+        "while current_state !=5:\n",
+        "  next_step_index=np.where(Q[current_state,]==np.max(Q[current_state,]))[1]\n",
+        "  if next_step_index.shape[0]>1:\n",
+        "    next_step_index=int(np.random.choice(next_step_index,size=1))\n",
+        "  else:\n",
+        "    next_step_index=int(next_step_index)\n",
+        "  steps.append(next_step_index)\n",
+        "  current_state=next_step_index"
+      ],
+      "metadata": {
+        "id": "snngX8H2k5c-"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "steps"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4vQodWQIl9Nv",
+        "outputId": "6491a6c7-82e1-40bc-9ff8-f8179be15c89"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KxwBkXaomptu"
       },
       "execution_count": null,
       "outputs": []
